# taskflow

./: .gitignore  README.md  ROUTINE_EXAMPLES.md  pyproject.toml  requirements.txt  test_add_checklist_modes.py  test_basic.py  test_checklist_system.py  test_edit_functionality.py  test_integration.py  test_roleta.py  test_routine.py  test_splite.py  test_task_management_in_modes.py  test_tree_selection.py
.claude/: settings.local.json
.github/workflows/: deploy.yml
backend/config/: settings.py
backend/tasks/: admin.py  models.py  serializers.py  urls.py  views.py
backend/tasks/migrations/: 0001_initial.py  0002_routine_routinechecklistitem.py
data/: activities.json  roleta_items.json  routines.json  rpg_save.json  saved_tasks.json  tasks.json
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  App.module.css  DailyFocusApp.jsx  index.css  main.jsx
frontend/src/api/: dailyTasks.js  modeStats.js  routines.js  tasks.js
frontend/src/components/: AddRoutineForm.jsx  AddRoutineForm.module.css  AddTaskForm.jsx  AddTaskForm.module.css  CountdownTimer.jsx  CountdownTimer.module.css  ModeSession.jsx  ModeSession.module.css  ModesPanel.jsx  ModesPanel.module.css  RoutineCard.jsx  TaskCard.jsx  (+12 more)
supabase/: mode_stats_migration.md  schema.sql
taskflow/: __init__.py  cli.py  heatmap.py  models.py  routines_window.py  storage.py  timer.py  utils.py
taskflow/modes/: __init__.py  base.py  espresso.py  lazy_falcon.py  momentum.py  music.py  rpg_class.py  splite.py  tiktok.py
test_add_checklist/: tasks.json
(+84 files in other folders)
